# mmolb_parsing

./: .gitignore  Cargo.toml  README  README.md  err  test-cases.txt  variants.txt
src/: enums.rs  game.rs  lib.rs  main.rs  nom_parsing.rs  parsed_event.rs  parsing.rs  raw_game.rs  serde_utils.rs  time.rs  utils.rs
src/feed_event/: feed_event.rs  feed_event_text.rs  mod.rs  raw_feed_event.rs
src/game/: event.rs  game.rs  mod.rs  weather.rs
src/nom_parsing/: mod.rs  parse.rs  parse_feed_event.rs  parse_player_feed_event.rs  parse_team_feed_event.rs  shared.rs
src/player/: mod.rs
src/player_feed/: mod.rs
src/team/: mod.rs  raw_team.rs  team.rs
src/team_feed/: mod.rs
test_data/: fbcag.json  game_extra_fields.json  livingston_game.json  livingston_game.ron  livingston_game_result.json  player.json  s2_d240_game.json  s2_feed_event.json  s2_player.json  s2_team.json  s2_team_player.json
