[package]
name = "mmolb_parsing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "downloader"
required-features = ["reqwest", "tokio"]

[features]
reqwest = ["dep:reqwest"]
tokio = ["dep:tokio", "dep:futures"]

[dependencies]
futures = { version = "0.3.31", optional = true }
nom = "8.0.0"
nom-language = "0.1.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"], optional = true }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"], optional = true }
