[package]
name = "mmolb_parsing"
version = "0.42.0"
edition = "2021"
default-run = "parser"

[[bin]]
name = "parser"
required-features = ["bin"]

[[bin]]
name = "item_linter"
required-features = ["bin"]

[features]
bin = ["dep:clap", "dep:tracing-subscriber", "dep:tokio", "dep:futures", "dep:reqwest", "dep:reqwest-middleware", "dep:http-cache-reqwest", "dep:async-stream", "dep:serde_json_diff", "serde_json/raw_value"]

[dev-dependencies]
serde_json_diff = "0.1.1"
tracing-test = "0.2.5"
tracing-subscriber = "0.3.19"

[dependencies]
async-stream = { version = "0.3.6", optional = true }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"], optional = true }
futures = { version = "0.3.31", optional = true }
http-cache-reqwest = { version = "0.15.1", optional = true }
nom = "8.0.0"
nom-language = "0.1.0"
phf = { version = "0.12.1", features = ["macros"] }
reqwest = { version = "0.12.15", features = ["blocking", "brotli", "gzip", "json"], optional = true }
reqwest-middleware = { version = "0.4.2", optional = true }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_cow = "0.1.2"
serde_json = "1.0.140"
serde_json_diff = { version = "0.1.1", optional = true }
serde_with = { version = "3.14.0", features = ["macros"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"], optional = true }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", optional = true }
indexmap = {version = "2.10.0", features = ["serde"]}